fixed validation issue

--- a/aboutus.html
+++ b/aboutus.html
@@ -148,6 +148,7 @@
                             <p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. He says, <em>Put together the cuisines from the two craziest cultures, and you get a winning hit! Amma Mia!</em></p>
                         </div>
                     </div>
+                </div>
 
                     <!-- Various types of Accordian-->
                     <!-- <div class="accordion" id="myAccordion">
@@ -170,8 +171,6 @@
                             </div>
                         </div>
                     </div> -->
-                    
-                    
             </div>
        </div>
        <div class="row row-content">
