--- a/index.html
+++ b/index.html
@@ -166,21 +166,11 @@
                             <div class="offset-md-2 col-md-8 offset-1 ">
                                 <button type="submit" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
                                 <button type="submit" class="btn btn-primary">Reserve</button>
-
                             </div>
-
                         </div>
-
-
-
-
-
-
                     </form>
-
                 </div>
             </div>
-
         </div>
     </div>
 
@@ -264,6 +254,15 @@
                         <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
                             <span class="carousel-control-next-icon"></span>
                         </a>
+                        <!--Carousel pasue-resume controller-->
+                        <div class="btn-grp" id="carouselButton">
+                            <button class="btn btn-danger btn-sm" id="carousel-pause">
+                                <span class="fa fa-pause"></span>
+                            </button>
+                            <button class="btn btn-success btn-sm" id="carousel-play">
+                                <span class="fa fa-play"></span>
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -435,12 +434,23 @@
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
-    <!--tooltip script-->
-    <!-- <script>
+    
+    <script>
+        
         $(document).ready(function(){
-            $('[data-toggle="tooltip"]').tooltip();
+            //tooltip script
+            // $('[data-toggle="tooltip"]').tooltip();
+            //carousel slide change interval
+            $("#mycarousel").carousel( { interval: 2000 } );
+            $("#carousel-pause").click(function(){
+                $("#mycarousel").carousel('pause');
+            });
+            $("#carousel-play").click(function(){
+                $("#mycarousel").carousel('cycle');
+            });
+
         });
-    </script> -->
+    </script> 
 </body>
 
 </html>
