End of the course

--- a/index.html
+++ b/index.html
@@ -467,6 +467,15 @@
                 }
             });
 
+            $("#reservationButton").click(function(){
+                $("#reservationModal").modal();
+            });
+
+            $("#loginButton").click(function(){
+                $("#loginModal").modal();
+            });
+
+
         });
     </script> 
 </body>
